tests/e2e/tests/trustdomain/server-manifests/istio-operator.yaml
apiVersion: operator.kyma-project.io/v1alpha2
kind: Istio
metadata:
  name: default
  namespace: kyma-system
spec:
  config:
    trustDomain: "server.trust.domain"
